# poker-practice

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_PLAN.md  Poker Training Engine.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/analysis/: ai_review.py  equity.py  ev.py  range_engine.py  scoring.py  stats.py
backend/app/api/: rate_limit.py  routes.py  schemas.py  session.py  ws.py
backend/app/bots/: fish.py  gto.py  interface.py  llm_coach.py  profiles.py  regular.py  shark.py  visible_state.py
backend/app/db/: models.py  repository.py
backend/app/engine/: game.py  game_state.py  pot.py  validators.py
backend/app/models/: card.py  hand.py  types.py
backend/app/services/: hand_analysis.py  hand_history.py
backend/tests/: test_advanced_bots.py  test_analysis.py  test_api.py  test_bots.py  test_edge_cases.py  test_game_engine.py  test_hand_eval.py  test_services.py
docs/: OBSERVABILITY.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css  types.ts
frontend/src/audio/: SoundManager.ts
frontend/src/components/: ActionPanel.tsx  Card.tsx  ChipStack.tsx  CoachChat.tsx  CommunityCards.tsx  EquityBreakdown.tsx  HUD.tsx  HandReplayer.tsx  HandResultBar.tsx  HandReview.tsx  HandStrengthMeter.tsx  HintPanel.tsx  HowCalculationsWork.tsx  Modal.tsx  Player.tsx  Pot.tsx  PotOddsDisplay.tsx  PreflopChart.tsx  RangeVisualization.tsx  SessionDashboard.tsx  SetupScreen.tsx  Table.tsx  Toast.tsx  TrainingTools.tsx
frontend/src/hooks/: useGameSocket.ts  useKeyboardShortcuts.ts
frontend/src/test/: format.test.ts  gameReducer.test.ts
frontend/src/utils/: format.ts
