[project]
name = "poker-training-engine"
version = "0.1.0"
description = "AI-powered poker practice platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "phevaluator>=0.5",
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "websockets>=14.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "E402",  # module-level imports — we use deferred imports intentionally
    "TCH",   # type-checking-only imports — not worth the churn
    "B008",  # function-call-in-default-argument — standard FastAPI Depends() pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
